[tool.poetry]
name = "ds5ctl"
version = "0.1.0"
description = "Some reference implementations of DS5-related I/O"
authors = ["Zach Kanzler <they4kman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
hidapi = "^0.11.2"
dearpygui = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
