[tool.poetry]
name = "ds5ctl"
version = "0.2.1"
description = "Some reference implementations of DS5-related I/O"
authors = ["Zach Kanzler <they4kman@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = 'https://github.com/theY4Kman/ds5ctl'
homepage = 'https://github.com/theY4Kman/ds5ctl'

[tool.poetry.dependencies]
python = "^3.10"

dearpygui = "^1.6.2"
hidapi = "^0.11.2"
mopyx = "^1.1.1"
pytest = "~=7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ds5ctl = 'ds5ctl.gui:run_gui'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
